crates/buiy_core/tests/crosscut/snapshots/width_ramp@0.snap
---
source: crates/buiy_core/tests/snapshot_animation.rs
expression: width_ramp@0
---
# buiy-display-list-dump v1
[nodes painters_z]
0 animated rect pos=0,0 size=10,10 color=#00000000 clip=none group=none
[buckets draw-order]
